simple-deploy/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-backend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-backend-app    # point to deployment file app label
  template:
    metadata:
      name: student-backend-app-pod
      labels:
        app: student-backend-app    # point to service file selector
    spec:
      containers:
        - name: student-backend-app-container
          image: prashantchitale22/easy-backend:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
