simple-deploy/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
  labels:
    app: backend-app
spec:
  containers:
    - name: backend-app
      image: prashantchitale22/easy-backend:latest
      ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend-app
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: java
  type: NodePort
